--- a/vc2017/ABP.vcxproj
+++ b/vc2017/ABP.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{406E17CE-FCA7-49C0-8631-1E25B2B2F5E7}</ProjectGuid>
     <RootNamespace>ABP</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
